# EchoMario

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: super_mario_bros_1_1_features.yaml  toy_platformer.yaml  toy_platformer_continuous.yaml  toy_platformer_continuous_cnn.yaml  toy_platformer_continuous_cnn_gpu_max.yaml  toy_platformer_continuous_cnn_parallel.yaml  toy_platformer_continuous_cnn_quick.yaml  toy_platformer_continuous_cnn_stable_laptop.yaml  toy_platformer_continuous_cnn_stable_long.yaml  toy_platformer_continuous_cnn_temporal.yaml  toy_platformer_continuous_linear.yaml  toy_platformer_curriculum_stage1.yaml  toy_platformer_curriculum_stage2.yaml  toy_platformer_curriculum_stage3.yaml  toy_platformer_curriculum_stage4.yaml  toy_platformer_long_random.yaml  toy_platformer_random.yaml  toy_platformer_strong.yaml
configs/curriculum_laptop/: stage1_run_right.yaml  stage2_single_gap.yaml  stage2b_two_single_gaps.yaml  stage2c_wide_gap.yaml  stage3_varied_gaps.yaml  stage4_easy_enemies.yaml  stage5_full_mix.yaml
docs/: architecture.md  legal.md  visualization.md
scripts/: evaluate_checkpoints.py  explore_toy_world.py  play.py  plot_run_comparison.py  record_training_evolution.py  record_video.py  train.py  train_curriculum.py
src/echomario/agents/: cnn_policy.py  factory.py  readout_policy.py
src/echomario/envs/: make_env.py  mario_env.py  reset.py  toy_platformer_env.py
src/echomario/reservoirs/: esn.py
src/echomario/training/: env_pool.py  evaluate.py  ppo.py  (+1 more)
tests/: test_env.py  test_policy_shapes.py  test_reservoir.py  test_runtime.py
(+3 files in other folders)
